--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "lodash": "^4.17.21",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "path": "^0.12.7"
   }
 }
